--- a/rebar.config
+++ b/rebar.config
@@ -9,7 +9,7 @@
        ]}.
 
 %% Erlang compiler options
-{erl_opts, [debug_info, warnings_as_errors
+{erl_opts, [warnings_as_errors
            ]}.
 
 %% Erlang edoc options for asciiedown_doclet
