Update rebar (2.1.0-pre-4-gbf35ec9)

--- a/rebar.config
+++ b/rebar.config
@@ -1,18 +1,11 @@
 %%% -*- mode: erlang -*-
 
-%% Require OTP version R13B04, R14, or R15
 {require_otp_vsn, "R13B04|R14|R15"}.
 
-%% Depends
-{deps, [{meck, "", {git, "git://github.com/norton/meck.git"}}
-        , {edown, "", {git, "git://github.com/norton/edown.git"}}
-       ]}.
+{erl_opts, [warnings_as_errors]}.
 
-%% Erlang compiler options
-{erl_opts, [warnings_as_errors
-           ]}.
+{xref_checks, [undefined_function_calls, deprecated_function_calls]}.
 
-%% Erlang edoc options for asciiedown_doclet
 {edoc_opts, [{doclet, asciiedown_doclet}
              , {app_default, "http://www.erlang.org/doc/man"}
              , {new, true}
@@ -22,9 +15,6 @@
              , {top_level_readme, {"./README.md", "https://github.com/norton/asciiedoc"}}
             ]}.
 
-%% Erlang edoc options for asciiedoc_doclet
-%% {edoc_opts, [{doclet, asciiedoc_doclet}
-%%              , {app_default, "http://www.erlang.org/doc/man"}
-%%              , {new, true}
-%%              , {packages, false}
-%%             ]}.
+{deps, [{meck, "", {git, "git://github.com/norton/meck.git"}}
+        , {edown, "", {git, "git://github.com/norton/edown.git"}}
+       ]}.
